[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coroutines"
description = "Coroutines without an event loop"
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/ntessore/coroutines"
Issues = "https://github.com/ntessore/coroutines/issues"

[tool.hatch.version]
source = "vcs"

[tool.black]
target-version = ["py312"]
preview = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]
